<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.iottree</groupId>
		<artifactId>iottree-parent</artifactId>
		<version>1.7.7</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>iottree-core</artifactId>
	<packaging>jar</packaging>
	
	  <properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <maven.compiler.source>1.8</maven.compiler.source>
	    <maven.compiler.target>1.8</maven.compiler.target>
		<output.directory>../_output</output.directory>
	  </properties>

<build>
        <finalName>iottree-core</finalName>
        <plugins>
        </plugins>
    </build>
    
	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.milo/sdk-client -->
		<dependency>
			<groupId>org.eclipse.milo</groupId>
			<artifactId>milo-sdk-client</artifactId>
			
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.milo/sdk-server -->
		<dependency>
			<groupId>org.eclipse.milo</groupId>
			<artifactId>milo-sdk-server</artifactId>
		</dependency>
		<!-- 
		<dependency>
		    <groupId>org.eclipse.milo</groupId>
		    <artifactId>stack-client</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.eclipse.milo</groupId>
		    <artifactId>stack-server</artifactId>
		</dependency>

		<dependency>
			<groupId>org.eclipse.milo</groupId>
			<artifactId>dictionary-manager</artifactId>
		</dependency>
		 -->
		<dependency>
			<groupId>org.graalvm.js</groupId>
			<artifactId>js</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.graalvm.sdk/graal-sdk -->
		<dependency>
		    <groupId>org.graalvm.sdk</groupId>
		    <artifactId>graal-sdk</artifactId>
		</dependency>

		<dependency>
			<groupId>org.graalvm.js</groupId>
			<artifactId>js-scriptengine</artifactId>

		</dependency>
		

		<dependency>
		    <groupId>org.graalvm.truffle</groupId>
		    <artifactId>truffle-api</artifactId>
		</dependency>
		
		
		<dependency>
	    <groupId>tanukisoft</groupId>
	    <artifactId>wrapper</artifactId>
	</dependency>
        <!-- 
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
		</dependency>
		 -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
		
	<dependency>
	    <groupId>javax.servlet</groupId>
	    <artifactId>servlet-api</artifactId>
	    <scope>system</scope>
	    <version>2.5</version>
	     <systemPath>${basedir}/../server/tomcat/lib/servlet-api.jar</systemPath>
	</dependency>
	
	<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<scope>system</scope>
			<version>2.2</version>
			<systemPath>${basedir}/../server/tomcat/lib/jsp-api.jar</systemPath>
		</dependency>
	
	<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>websocket-api</artifactId>
			<scope>system</scope>
			<version>2.2</version>
			<systemPath>${basedir}/../server/tomcat/lib/websocket-api.jar</systemPath>
		</dependency>
	
		<dependency>
			<groupId>gun.io</groupId>
			<artifactId>RXTXcomm</artifactId>
			<scope>system</scope>
			<version>2.2</version>
			<systemPath>${basedir}/lib/RXTXcomm.jar</systemPath>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		</dependency>
				
				<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
		<dependency>
		    <groupId>commons-fileupload</groupId>
		    <artifactId>commons-fileupload</artifactId>
		    <version>1.4</version>
		    <exclusions>
		    	<exclusion>
		    		<groupId>commons-io</groupId>
		    		<artifactId>commons-io</artifactId>
		    	</exclusion>
		    </exclusions>
		</dependency>
<!-- 
		<dependency>
		    <groupId>org.bidib.jbidib.org.qbang.rxtx</groupId>
		    <artifactId>rxtxcomm</artifactId>
		    <version>2.2</version>
		</dependency>
 -->
		<!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
		<dependency>
		    <groupId>org.java-websocket</groupId>
		    <artifactId>Java-WebSocket</artifactId>
		    <version>1.5.2</version>
		</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all
<dependency>
    <groupId>org.apache.activemq</groupId>
    <artifactId>activemq-all</artifactId>
    <version>5.16.3</version>
</dependency>
 -->
 <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-kahadb-store -->
<dependency>
    <groupId>org.apache.activemq</groupId>
    <artifactId>activemq-kahadb-store</artifactId>
    <version>5.16.3</version>
</dependency>
 
<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-jaas -->
<dependency>
    <groupId>org.apache.activemq</groupId>
    <artifactId>activemq-jaas</artifactId>
    <version>5.16.3</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-mqtt -->
<dependency>
    <groupId>org.apache.activemq</groupId>
    <artifactId>activemq-mqtt</artifactId>
    <version>5.16.3</version>
</dependency>


<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
<dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-core</artifactId>
    <version>2.12.5</version>
</dependency>
<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
<dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-databind</artifactId>
    <version>2.12.5</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
<dependency>
    <groupId>org.eclipse.jetty</groupId>
    <artifactId>jetty-server</artifactId>
    <version>9.4.43.v20210629</version>
</dependency>

<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
<dependency>
    <groupId>commons-logging</groupId>
    <artifactId>commons-logging</artifactId>
    <version>1.2</version>
</dependency>

	<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>

		<!-- https://mvnrepository.com/artifact/io.netty/netty-all 
		<dependency>
		    <groupId>io.netty</groupId>
		    <artifactId>netty-all</artifactId>
		    <version>4.1.63.Final</version>
		</dependency>
		-->
		
				
		<!-- https://mvnrepository.com/artifact/com.atlassian.commonmark/commonmark -->
		<dependency>
		    <groupId>com.atlassian.commonmark</groupId>
		    <artifactId>commonmark</artifactId>
		    <version>0.17.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path</artifactId>
		    <version>2.7.0</version>
		</dependency>
				<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.15.1</version>
		</dependency>
		<dependency>
		     <groupId>net.sourceforge.htmlunit</groupId>
		     <artifactId>htmlunit</artifactId>
		     <version>2.62.0</version>
		     
		</dependency>
		
		<dependency>
    <groupId>com.influxdb</groupId>
    <artifactId>influxdb-client-java</artifactId>
    <version>7.1.0</version>
</dependency>

		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
		    <groupId>org.xerial</groupId>
		    <artifactId>sqlite-jdbc</artifactId>
		    <version>3.45.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.spullara.mustache.java/compiler -->
<dependency>
    <groupId>com.github.spullara.mustache.java</groupId>
    <artifactId>compiler</artifactId>
    <version>0.9.13</version>
</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
<dependency>
    <groupId>com.fazecast</groupId>
    <artifactId>jSerialComm</artifactId>
    <version>2.11.0</version>
</dependency>
		
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
</dependency>
		
	</dependencies>
	
</project>